# Full_Text_Search

./: CMakeLists.txt  CMakePresets.json  README.md
src/: inverted_index.cc  inverted_index.hh  main.cpp
